added faq tempate and made a few tweaks

--- a/src/faq-template.html
+++ b/src/faq-template.html
@@ -1,66 +1,51 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Parent template containing header and footer, linked files etc.</title>
-<link rel="stylesheet" type="text/css" href="../css/main.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="../css/checkout-working.css" media="screen" />
-<!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
-<![endif]-->
-<script src="../js/jquery-1.10.2.min.js" type="text/javascript"></script>
-<script src="../js/main.js" type="text/javascript"></script>
 
-
-</head>
 <body>
-
 <div id="breadcrumb" class="grey">
 	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="FAQs"><span class="this-level dark-gray">FAQs</span></a> </div>
 </div>
 <div id="faq-listing-wrapper">
 	<div id="ad-title-space">
-		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
+		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244" /> </div>
 		<h1 class="near-black">SiS Frequently asked questions</h1>
 		<p class="h1-sub-heading grey">We would like to share some of our customers' frequently asked questions.</p>
 	</div>
-<div id="faq-grey-bg-wrapper">
-		<div id="faq-content">
+	<div id="faq-grey-bg-wrapper">
+		<div class="faq-content">
 			<ul>
-				<li>What does ‘Isotonic mean?</li>
-				<p>A solution that is the same number of particles in solution as body fluid and plasma osmotically balanced with blood. It contains that same 
-					number of molecules and so can move freely into the bloodstream from the stomach. GO Gels are isotonic. </p>
-				<li>What is the best protein shake for weight training?</li>
-				<p>SiS REGO Rapid Recovery is best to take as soon as possible after training because the combination of carbohydrate and protein will reduce 
-					muscle catabolism and help build/rebuild muscle.</p>
-				<li>Which of your products are gluten free?</li>
-				<p>SiS REGO Rapid Recovery, SiS GO Electrolyte and SiS GO gels are gluten free, but the SiS GO bars aren't so steer clear of those. If you need 
-					any more information about the ingredients each product page on our website has an 'info' button which will give you the detail.</p>
-				<li>Why do you use Soy protein rather than Whey in your recovery products? </li>
-				<p>The main advantage of using soy protein is that it is lactose-free and therefore is suitable for those with a dairy allergy or intolerance, and we 
-					do have both soy and whey formulations of SiS REGO Rapid Recovery. </p>
-				<li>Can SiS REGO Night be used with skimmed milk rather than water? </li>
-				<p>You can mix it with milk if you wish. You will be adding more calories, which may or may not be useful to you and you will also be adding calcium, 
-					which may reduce absorption of the zinc and magnesium. You could just try making it with less water or adding less full fat milk to get the same 
-					mouth feel.</p>
-				<li>Are SiS GO Isotonic gels designed to replace isotonic drinks? </li>
-				<p>They were originally designed to make it easy for an athlete to take an energy boost without the need for bulky energy drinks or to co administer 
-					with water as was the case with the older generation of energy gels. There are situations where you would just use just a gel, there are situations 
-					where they would be complementary to electrolyte drinks as part of a flexible nutrition strategy. </p>
-				<li>What do SiS GO + Nitrate gels do and should you take them during exercise? </li>
-				<p>It's best to use them before exercise to improve efficiency. Nitrates can help blood flow, control blood pressure and improve exercise 
-					performance, it’s an exciting area of research at the moment. </p>
-				<li>Are the products suitable for Diabetics? </li>
-				<p>All SiS products can be used by diabetics if they take account of the carbohydrate content and build it into a nutritional strategy. SiS GO Energy 
-					can be used to maintain blood sugar levels, SiS GO Gels can be used if the blood sugar levels need to be raised in a hurry.</p>
-				</ul>
+				<li>What does ‘Isotonic mean?
+					<p>A solution that is the same number of particles in solution as body fluid and plasma osmotically balanced with blood. It contains that same number of molecules and so can move freely into the bloodstream from the stomach. GO Gels are isotonic. </p>
+				</li>
+				<li>What is the best protein shake for weight training?
+					<p>SiS REGO Rapid Recovery is best to take as soon as possible after training because the combination of carbohydrate and protein will reduce muscle catabolism and help build/rebuild muscle.</p>
+				</li>
+				<li>Which of your products are gluten free?
+					<p>SiS REGO Rapid Recovery, SiS GO Electrolyte and SiS GO gels are gluten free, but the SiS GO bars aren't so steer clear of those. If you need any more information about the ingredients each product page on our website has an 'info' button which will give you the detail.</p>
+				</li>
+				<li>Why do you use Soy protein rather than Whey in your recovery products?
+					<p>The main advantage of using soy protein is that it is lactose-free and therefore is suitable for those with a dairy allergy or intolerance, and we do have both soy and whey formulations of SiS REGO Rapid Recovery. </p>
+				</li>
+				<li>Can SiS REGO Night be used with skimmed milk rather than water?
+					<p>You can mix it with milk if you wish. You will be adding more calories, which may or may not be useful to you and you will also be adding calcium, which may reduce absorption of the zinc and magnesium. You could just try making it with less water or adding less full fat milk to get the same mouth feel.</p>
+				</li>
+				<li>Are SiS GO Isotonic gels designed to replace isotonic drinks?
+					<p>They were originally designed to make it easy for an athlete to take an energy boost without the need for bulky energy drinks or to co administer with water as was the case with the older generation of energy gels. There are situations where you would just use just a gel, there are situations where they would be complementary to electrolyte drinks as part of a flexible nutrition strategy.</p>
+				</li>
+				<li>What do SiS GO + Nitrate gels do and should you take them during exercise?
+					<p>It's best to use them before exercise to improve efficiency. Nitrates can help blood flow, control blood pressure and improve exercise performance, it’s an exciting area of research at the moment. </p>
+				</li>
+				<li>Are the products suitable for Diabetics?
+					<p>All SiS products can be used by diabetics if they take account of the carbohydrate content and build it into a nutritional strategy. SiS GO Energy can be used to maintain blood sugar levels, SiS GO Gels can be used if the blood sugar levels need to be raised in a hurry.</p>
+				</li>
+			</ul>
+			<div class="faq-content-footer">
+				<h4>Didn’t find your question here? What would you like to know?</h4>
+				<form method="post" class="question-form" action="#">
+					<input type="text" id="question-input" size="80" class="question-input" value="Send us your question and if others are asking too we’ll add it to the FAQ..." />
+					<button class="yellow-btn">Send</button>
+				</form>
+			</div>
+		</div>
 	</div>
-</div>
 	<!-- end of grey bg area --> 
-
-
-
-
-
-</body>
-</html>
+	
+</div>
