--- a/src/video-listing-template.html
+++ b/src/video-listing-template.html
@@ -88,10 +88,10 @@
 	<!-- /section --> 
 
 </div>
-<div id="yt-overlay">
+<div id="yt-overlay" onclick="javascript:ytclose();">
 	<div id="yt-outer-frame">
 		<div id="yt-inner-frame">
-			<div class="yt-xclose"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
+			<div class="yt-xclose" onclick="javascript:ytclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
 			<div class="clear"></div>
 			<h2></h2>
 			<h3></h3>
