--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -393,7 +393,7 @@
 		
 	</div>
 </div>
-<div id="footer">
+<div id="sticky-footer">
 	<div id="footer-nav">
 		<div id="footer-columns">
 			<div class="footer-column">
