numerous sins fixed

--- a/src/category-listing-template.html
+++ b/src/category-listing-template.html
@@ -6,12 +6,12 @@
 <div id="cat-listing-wrapper">
 	<div id="ad-title-space">
 		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
-		<h1 class="near-black"> Sponsorship &amp; partners </h1>
+		<h1 class="near-black"> Sponsorship &amp; Partners </h1>
 		<p class="h1-sub-heading grey">SiS category subheading</p>
 	</div>
 	<div id="category-grey-bg-wrapper">
 		<div id="category-wysiwyg">
-			<h2 class="near-black">Sponsorship &amp; partners</h2>
+			<h2 class="near-black">Sponsorship &amp; Partners</h2>
 			<p>Science in Sport has a unique heritage in working with the world’s top athletes and teams. It is these relationships that enable us to
 				constantly learn and understand what it takes to achieve the ultimate performance out of the world’s very best sportsmen and women.
 				This understanding is applied to every single product in the SiS range, therefore no matter what level you perform at you can be confident
