--- a/src/content-template.html
+++ b/src/content-template.html
@@ -98,10 +98,13 @@
 			<p class="error">Please complete the field below</p>
 			<label for="required-field">Mandatory field example*</label>
 			<input id="required-field" type="text" name="required-field" size="50" />
+			<div class="clear"></div>
 			<label for="optional-field">Optional field example</label>
 			<input id="optional-field" type="text" name="optional-field" size="50" />
+			<div class="clear"></div>
 			<label for="optional-field">A checkbox example</label>
 			<input id="check-box" name="check-box" type="checkbox" checked="checked" />
+			<div class="clear"></div>
 			<p class="error">Please complete the field below</p>
 			<label for="example-dd">Mandatory select example*</label>
 			<select id="example-dd" name="my-dd">
@@ -110,12 +113,14 @@
 				<option value="option-3">Option 3</option>
 				<option value="option-4">Option 4</option>
 			</select>
+			<div class="clear"></div>
 			<label for="RadioGroup1_0">Radio option 1</label>
 			<input type="radio" name="RadioGroup1" value="radio" id="RadioGroup1_0" />
+			<div class="clear"></div>
 			<label for="RadioGroup1_1">Radio option 2</label>
 			<input type="radio" name="RadioGroup1" value="radio" id="RadioGroup1_1" />
 
-<div style="clear:both"></div>
+<div class="clear"></div>
 			<label for="form-submit"></label>
 			<button id="form-submit">Submit Form</button>
 		</form>
