--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -8,6 +8,10 @@
 <!--[if IE 7]>
 	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
 <![endif]-->
+<!--[if IE]>
+	<link rel="stylesheet" type="text/css" href="../css/ie.css" media="screen">
+<![endif]-->
+
 <script src="../js/jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="../js/main.js" type="text/javascript"></script>
 </head>
@@ -443,6 +447,43 @@
 		<a target="blank" href="https://twitter.com/ScienceinSport" class="social-icon twitter"></a> <a target="blank" href="https://www.facebook.com/ScienceInSportOfficial" class="social-icon facebook"></a> <a target="blank" href="http://www.youtube.com/user/scienceinsport/" class="social-icon youtube"></a> </div>
 </div>
 <!-- #footer -->
+
+<!-- quick buy layer - not sure how RED want to implement this, so this just demonstrates the component -->
+<div id="qb-overlay" onclick="javascript:qbclose();">
+	<div id="qb-outer-frame">
+		<div id="qb-inner-frame">
+			<div class="qb-xclose" onclick="javascript:qbclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
+			<div class="clear"></div>
+			<div id="qb-header">
+				<h2 class="near-black">SiS Rego Rapid Recovery 1.6Kg</h2>
+				<p class="grey">Performance Recovery</p>
+			</div>
+			
+			<div class="qb-form">
+				<form action="#" method="post" name="add-to-basket" target="_self">
+					<div id="qb-dd-product-selectors">
+						<select id="prod-selection-1" name="prod-selection-1">
+							<option>Size</option>
+							<option value="sel1-1">1.6kg (20 servings)</option>
+							<option value="sel1-2">500g (8 servings)</option>
+							<option value="sel1-3">50g (1 serving)</option>
+							<option value="sel1-4">1.6kg (20 servings)</option>
+						</select>
+						<select id="prod-selection-2" name="prod-selection-2" >
+							<option >Flavour</option>
+							<option value="sel2-1">Chocolate</option>
+							<option value="sel2-2">Banana</option>
+							<option value="sel2-3">Vanilla</option>
+							<option value="sel2-4">Strawberry</option>
+						</select>
+						
+						<button class="yellow-btn">Add To Basket</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
