--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../css/checkout-working.css" media="screen" />
 <!--[if IE 7]>
 	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="../css/tara-ie7.css" media="screen">
 <![endif]-->
 <!--[if IE]>
 	<link rel="stylesheet" type="text/css" href="../css/ie.css" media="screen">
@@ -449,7 +450,7 @@
 <!-- #footer -->
 
 <!-- quick buy layer - not sure how RED want to implement this, so this just demonstrates the component -->
-<div id="qb-overlay" onclick="javascript:qbclose();">
+<div id="qb-overlay">
 	<div id="qb-outer-frame">
 		<div id="qb-inner-frame">
 			<div class="qb-xclose" onclick="javascript:qbclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
