--- a/src/product-template.html
+++ b/src/product-template.html
@@ -1,6 +1,15 @@
 <!-- product listing content -->
 <script src="../js/jQueryPlugins.js" type="text/javascript"></script>
-<script type="text/javascript">jQuery('#tab-container').easytabs();</script>
+<script type="text/javascript">
+	if(navigator.appVersion.indexOf("MSIE 7.")!=-1) {
+		//don't animate tabs in ie7 as there is a bug
+		jQuery('#tab-container').easytabs({'animate':false});
+	}
+	else
+	{
+		jQuery('#tab-container').easytabs();
+	}
+</script>
 <div id="breadcrumb" class="grey">
 	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Range</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Rapid Recovery Range</span> </a> &raquo; <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">SiS Rapid Recovery 1.6kg</span></a> </div>
 </div>
