numerous fixes including js sticky footer fix

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -393,7 +393,9 @@
 		</div>
 		<!-- #header -->
 		
-		<div id="content"> </div>
+		<div id="content"> 
+
+		</div>
 		<!-- #content --> 
 		
 	</div>
@@ -438,7 +440,7 @@
 						<span class="opening-hours">8:00am to 5:00pm, Mon to Fri </span> </div>
 					<div id="i-s-logo"><a href="http://www.informed-sport.com/" target="_blank"><img src="../img/ui/informed-sport.png" alt="Informed Sport" title="Informed Sport" height="44" width="87" /></a></div>
 				</div>
-				<div style="clear:both"></div>
+				<div class="clear"></div>
 			</div>
 		</div>
 	</div>
