--- a/src/contact-us-template.html
+++ b/src/contact-us-template.html
@@ -82,7 +82,7 @@
 						<label for="question-question">Your message<span class="red">*</span></label>
 						<textarea cols="60" rows="5" spellcheck="true" id="question-question"></textarea>
 						
-					<div style="clear:both"></div>
+					<div class="clear"></div>
 					<button id="form-submit">Submit Form</button>
 				</form>
 				</div>
