--- a/src/content-template.html
+++ b/src/content-template.html
@@ -89,7 +89,7 @@
 				</ul>
 			</div>
 		</div>
-		<div style="clear:both"></div>
+		<div class="clear"></div>
 		<!-- form builder -->
 		<div id="form-builder">
 		<h3>Form name (Form builder area)</h3>
