--- a/src/mini-basket-component.html
+++ b/src/mini-basket-component.html
@@ -1,6 +1,6 @@
 <div id="mini-basket-component">
    <div class="xclose"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20" /></div>
-  <div style="clear:both"></div>
+  <div class="clear"></div>
   <form class="mini-check-amounts" method="post" action="#">
     <div id="mini-basket-items" class="scroll"> 
       
@@ -111,12 +111,12 @@
       <div class="mini-basket-offer-row">
         <div class="mini-basket-offer-name">Free SiS shaker with every 1.6kg size protein shakes</div>
         <div class="mini-basket-offer-discount">- <span class="pound">&pound;</span><span class="line-total">555.99</span></div>
-        <div style="clear:both"></div>
+        <div class="clear"></div>
       </div>
       <div class="mini-basket-offer-row">
         <div class="mini-basket-offer-name">Free Delivery for orders over <span class="pound">&pound;</span>40</div>
         <div class="mini-basket-offer-discount">- <span class="pound">&pound;</span><span class="line-total">6.00</span></div>
-        <div style="clear:both"></div>
+       <div class="clear"></div>
       </div>
       <div class="mini-basket-offer-row">
         <div class="mini-basket-update"> <span class="promo-labelo">Promotion code:</span>
@@ -127,19 +127,19 @@
           </div>
         </div>
         <hr />
-        <div style="clear:both"></div>
+        <div class="clear"></div>
       </div>
       <div class="mini-basket-offer-row">
         <div class="mini-basket-offer-name">Basket Sub Total</div>
         <div class="mini-basket-offer-discount"><span class="pound">&pound;</span><span class="line-total">3619.92</span></div>
-        <div style="clear:both"></div>
+        <div class="clear"></div>
       </div>
       <hr />
       <div id="mini-checkout-btn"><a class="cta-btn _150" href="#" title="CTA"><span>Checkout</span></a>
         <div class="dropshadow _150"><img src="../img/ui/drop-shadow.png" alt="" /></div>
       </div>
-      <div style="clear:both"></div>
+      <div class="clear"></div>
     </div>
   </form>
-  <div style="clear:both"></div>
+  <div class="clear"></div>
 </div>
