--- a/src/product-template.html
+++ b/src/product-template.html
@@ -210,7 +210,7 @@ Proin eget tempus massa.</p>
 				<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a> <a href="#" class="pag-next">NEXT</a> <a href="#" class="pag-disabled">1</a> <a href="#">2</a> ... <a href="#">VIEW ALL</a></p>
 			</div>
 		</div>
-		<div style="clear:both"></div>
+		<div class="clear"></div>
 		<div><img src="../img/dummy/payment-logos.png" alt="Card logos" /></div>
 	</div>
 </div>
