validated all mine against w3 validator

--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -455,7 +455,7 @@
 <div id="qb-overlay">
 	<div id="qb-outer-frame">
 		<div id="qb-inner-frame">
-			<div class="qb-xclose" onclick="javascript:qbclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
+			<div class="qb-xclose" onclick="javascript:qbclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20" /></div>
 			<div class="clear"></div>
 			<div id="qb-header">
 				<h2 class="near-black">SiS Rego Rapid Recovery 1.6Kg</h2>
