--- a/src/category-listing-template.html
+++ b/src/category-listing-template.html
@@ -5,7 +5,7 @@
 </div>
 <div id="cat-listing-wrapper">
 	<div id="ad-title-space">
-		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
+		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244" /> </div>
 		<h1 class="near-black"> Sponsorship &amp; Partners </h1>
 		<p class="h1-sub-heading grey">SiS category subheading</p>
 	</div>
