--- a/src/contact-us-template.html
+++ b/src/contact-us-template.html
@@ -80,7 +80,7 @@
 					
 					<p class="error">Please enter your question</p>
 						<label for="question-question">Your message<span class="red">*</span></label>
-						<textarea cols="60" rows="5" spellcheck="true" id="question-question"></textarea>
+						<textarea cols="60" rows="5" id="question-question"></textarea>
 						
 					<div class="clear"></div>
 					<button id="form-submit">Submit Form</button>
@@ -115,6 +115,3 @@
 	</div>
 </div>
 
-
-</body>
-</html>
