--- a/src/mini-basket-component.html
+++ b/src/mini-basket-component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-update">
           <label>Qty:</label>
-          <input type="text" name="product-amount" size="3" value="3">
+          <input type="text" name="product-amount" size="3" value="3" />
         </div>
         <div class="mini-check-final-price"> <span class="pound">&pound;</span><span class="line-total">59.97</span> </div>
       </div>
@@ -38,7 +38,7 @@
         </div>
         <div class="item-update free-product">
           <label>Qty:</label>
-          <input type="text" name="product-amount" size="3" value="1" readonly="readonly">
+          <input type="text" name="product-amount" size="3" value="1" readonly="readonly" />
         </div>
         <div class="mini-check-final-price"> <del><span class="pound">&pound;</span><span class="line-total">19.99</span></del><br />
           <span class="pound">&pound;</span><span class="line-total">0.00</span> </div>
@@ -59,7 +59,7 @@
         </div>
         <div class="item-update">
           <label>Qty:</label>
-          <input type="text" name="product-amount" size="3" value="2">
+          <input type="text" name="product-amount" size="3" value="2" />
         </div>
         <div class="mini-check-final-price"> <span class="pound">&pound;</span><span class="line-total">1999.98</span> </div>
       </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="item-update">
           <label>Qty:</label>
-          <input type="text" name="product-amount" size="3" value="2">
+          <input type="text" name="product-amount" size="3" value="2" />
         </div>
         <div class="mini-check-final-price"> <del><span class="pound">&pound;</span><span class="line-total">1999.98</span></del><br />
           <span class="pound">&pound;</span><span class="line-total">1500.00</span> </div>
@@ -100,7 +100,7 @@
         </div>
         <div class="item-update">
           <label>Qty:</label>
-          <input type="text" name="product-amount" size="3" value="3">
+          <input type="text" name="product-amount" size="3" value="3" />
         </div>
         <div class="mini-check-final-price"> <span class="pound">&pound;</span><span class="line-total">59.97</span> </div>
       </div>
@@ -120,9 +120,9 @@
       </div>
       <div class="mini-basket-offer-row">
         <div class="mini-basket-update"> <span class="promo-labelo">Promotion code:</span>
-          <input type="text" name="promo-code" size="10" value="FreeDel13">
+          <input type="text" name="promo-code" size="10" value="FreeDel13" />
           <div class="mini-basket-update-button">
-            <input type="submit" value="Update">
+            <input type="submit" value="Update" />
             <div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
           </div>
         </div>
