--- a/src/product-listing-template.html
+++ b/src/product-listing-template.html
@@ -57,7 +57,7 @@
                             <div class="product-price-a"><span class="pound">&pound;</span>31.80</div>
                             <div class="product-info-a"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
                             <div class="product-buy-a">
-                                <input class="buy-button" type="submit" value="Buy">
+                                <input class="buy-button" type="submit" value="Buy" />
                                 <div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
                            </div>
                       	</div>
@@ -70,7 +70,7 @@
                             <div class="product-price-a"><span class="pound">&pound;</span>1.50</div>
                             <div class="product-info-a"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
                             <div class="product-buy-a">
-                                <input class="buy-button" type="submit" value="Buy">
+                                <input class="buy-button" type="submit" value="Buy" />
                                 <div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
                            </div>
                       	</div>
@@ -84,7 +84,7 @@
                             <div class="product-price-a"><span class="pound">&pound;</span>10.80</div>
                             <div class="product-info-a"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
                             <div class="product-buy-a">
-                                <input class="buy-button" type="submit" value="Buy">
+                                <input class="buy-button" type="submit" value="Buy" />
                                 <div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
                            </div>
                       	</div>
@@ -97,7 +97,7 @@
                             <div class="product-price-a"><span class="pound">&pound;</span>1.80</div>
                             <div class="product-info-a"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
                             <div class="product-buy-a">
-                                <input class="buy-button" type="submit" value="Buy">
+                                <input class="buy-button" type="submit" value="Buy" />
                                 <div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
                            </div>
                       	</div>
