--- a/src/product-template.html
+++ b/src/product-template.html
@@ -14,7 +14,7 @@
 	<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Range</span></a> &raquo; <a href="#" title="home"><span class="higher-level grey">SiS Rego Rapid Recovery Range</span> </a> &raquo; <a href="#" title="Sponsorship &amp; Partners"><span class="this-level dark-gray">SiS Rapid Recovery 1.6kg</span></a> </div>
 </div>
 <div id="ad-title-space">
-	<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
+	<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244" /> </div>
 	<h1 class="near-black"> SiS Online Store </h1>
 	<p class="h1-sub-heading grey">Free Delivery on all UK orders.</p>
 </div>
@@ -95,7 +95,7 @@
 				<li class='tab'><a href="#prod-tab-1">Product details</a></li>
 				<li class='tab'><a href="#prod-tab-2">Nutritional info</a></li>
 				<li class='tab'><a href="#prod-tab-3">Usage</a></li>
-				<li class='tab'><a href="#prod-tab-4">Q &amp A</a></li>
+				<li class='tab'><a href="#prod-tab-4">Q &amp; A</a></li>
 				<li class='tab'><a href="#prod-tab-5">Video</a></li>
 			</ul>
 			<div id="prod-tab-1" class="tabbed-content">
@@ -137,16 +137,16 @@ Proin eget tempus massa.</p>
 						<form id="question-submission-form" action="#" method="post" name="submit-a-question" target="_self">
 						<p class="error"> Please enter a first name</p>
 						<label for="question-firstname">First Name*</label>
-						<input id="question-firstname" type="text" name="q-a-first-name" size="50">
+						<input id="question-firstname" type="text" name="q-a-first-name" size="50" />
 						<p class="error"> Please enter a last name</p>
 						<label for="question-lastname">Last Name*</label>
-						<input id="question-lastname" type="text" name="q-a-last-name" size="50">
+						<input id="question-lastname" type="text" name="q-a-last-name" size="50" />
 						<p class="error">Please enter a valid email address</p>
 						<label for="question-email-address">Email Address*</label>
-						<input id="question-email-address" type="text"  name="q-a-email-address" size="50" maxlength="128">
+						<input id="question-email-address" type="text"  name="q-a-email-address" size="50" maxlength="128" />
 						<p class="error">Please enter your question</p>
 						<label for="question-question">Your question*</label>
-						<textarea cols="50" rows="5" spellcheck="true" id="question-question"></textarea>
+						<textarea cols="50" rows="5" id="question-question"></textarea>
 						<label for="submit-question"></label>
 						<button id="submit-question" class="yellow-btn">Submit</button>
 						</form>
@@ -178,7 +178,7 @@ Proin eget tempus massa.</p>
 					<div class="product-buttons-b">
 						<div class="product-info-b"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 						<div class="product-buy-b">
-							<input class="buy-button" type="submit" value="Buy">
+							<input class="buy-button" type="submit" value="Buy" />
 							<div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
 						</div>
 					</div>
@@ -192,7 +192,7 @@ Proin eget tempus massa.</p>
 					<div class="product-buttons-b">
 						<div class="product-info-b"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 						<div class="product-buy-b">
-							<input class="buy-button" type="submit" value="Buy">
+							<input class="buy-button" type="submit" value="Buy" />
 							<div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
 						</div>
 					</div>
