--- a/src/search-results-template.html
+++ b/src/search-results-template.html
@@ -1,5 +1,5 @@
 
-<!-- product listing content -->
+<!-- search results listing content -->
 <div id="search-results-content">
 	<div id="breadcrumb" class="grey">
 		<div> <a href="#" title="home"><span class="higher-level grey">Home</span></a> &raquo; <a href="#" title="Sponsorshop &amp; Partners"><span class="this-level dark-gray">Search results</span></a> </div>
@@ -42,7 +42,7 @@
 									<div class="product-buttons-b">
 										<div class="product-info-b"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 										<div class="product-buy-b">
-											<input class="buy-button" type="submit" value="Buy">
+											<input class="buy-button" type="submit" value="Buy" />
 											<div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
 										</div>
 									</div>
@@ -56,7 +56,7 @@
 									<div class="product-buttons-b">
 										<div class="product-info-b"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 										<div class="product-buy-b">
-											<input class="buy-button" type="submit" value="Buy">
+											<input class="buy-button" type="submit" value="Buy" />
 											<div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
 										</div>
 									</div>
@@ -71,7 +71,7 @@
 									<div class="product-buttons-b">
 										<div class="product-info-b"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 										<div class="product-buy-b">
-											<input class="buy-button" type="submit" value="Buy">
+											<input class="buy-button" type="submit" value="Buy" />
 											<div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
 										</div>
 									</div>
@@ -85,7 +85,7 @@
 									<div class="product-buttons-b">
 										<div class="product-info-b"><a href="#" class="get-info" title="Info"><span>Info</span></a></div>
 										<div class="product-buy-b">
-											<input class="buy-button" type="submit" value="Buy">
+											<input class="buy-button" type="submit" value="Buy" />
 											<div class="dropshadow _110"><img src="../img/ui/drop-shadow.png" alt="" /></div>
 										</div>
 									</div>
