--- a/src/video-listing-template.html
+++ b/src/video-listing-template.html
@@ -4,7 +4,7 @@
 </div>
 <div id="video-listing-wrapper">
 	<div id="ad-title-space">
-		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244"> </div>
+		<div id="checkout-ad" class="check-advert"> <img src="../img/dummy/header-advert-zone.jpg" alt="SiS advertisement" width="994" height="244" /> </div>
 		<h1 class="near-black">SiS Videos</h1>
 		<p class="h1-sub-heading grey">SiS video subheading</p>
 	</div>
@@ -91,7 +91,7 @@
 <div id="yt-overlay" onclick="javascript:ytclose();">
 	<div id="yt-outer-frame">
 		<div id="yt-inner-frame">
-			<div class="yt-xclose" onclick="javascript:ytclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20"></div>
+			<div class="yt-xclose" onclick="javascript:ytclose();"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20" /></div>
 			<div class="clear"></div>
 			<h2></h2>
 			<h3></h3>
