--- a/src/my-account-forgot-password.html
+++ b/src/my-account-forgot-password.html
@@ -15,7 +15,7 @@
 					<form action="">
 						<p class="grey instructions">Please enter your email address and we'll send you instructions on how to reset your password.</p>
 						<label for="check-forgot-password-email">Email address:</label> 
-						<input  id="check-forgot-password-email" type="text" name="checkout-new-customer-email" size="40">
+						<input  id="check-forgot-password-email" type="text" name="checkout-new-customer-email" size="40" />
 						<p class="dotted-line"></p>
 						<button class="yellow-button-wide" name="forgot-password" type="submit">Submit</button>
 						<button class="black-button">Back</button >
@@ -35,7 +35,7 @@
 			 </div>
 			 <div class="_15 left"></div>
 				<div class="_569 adzone text-overlaid left">
-					<a href="#" title="Advert Zone"><img src="../img/dummy/ad-568x315px.jpg" height="315" width="569" alt="Advert Zone"></a>
+					<a href="#" title="Advert Zone"><img src="../img/dummy/ad-568x315px.jpg" height="315" width="569" alt="Advert Zone" /></a>
 					<div class="ad-text">
 						<h2><a href="#" title="Advert Zone"><span class="yellow">Shop SiS</span></a></h2>
 					    <h3><span class="white">Leaders in Endurance Nutrition</span></h3>
