--- a/src/MAIN.html
+++ b/src/MAIN.html
@@ -4,10 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Parent template containing header and footer, linked files etc.</title>
 <link rel="stylesheet" type="text/css" href="../css/main.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="../css/checkout-working.css" media="screen" />
+
+<link rel="stylesheet" type="text/css" href="../css/j.css" media="screen" />
 <!--[if IE 7]>
 	<link rel="stylesheet" type="text/css" href="../css/ie-7.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../css/tara-ie7.css" media="screen">
 <![endif]-->
 <!--[if IE]>
 	<link rel="stylesheet" type="text/css" href="../css/ie.css" media="screen">
