--- a/src/my-account-add-address.html
+++ b/src/my-account-add-address.html
@@ -308,10 +308,10 @@
 						<input id="non-member-town" type="text" name="register-town"  />
 						<p class="error">Please enter a county / state</p>
 						<label for="non-member-address-county">County</label>
-						<input id="non-member-address-county" type="text" name="register-address-county" size="51"/>
+						<input id="non-member-address-county" type="text" name="register-address-county" />
 						<p class="error">Please type in a postcode / zip code</p>
 						<label for="non-member-address-postcode">Postcode*</label>
-						<input id="non-member-address-postcode" type="text" name="register-address-postcode" size="51"/>
+						<input id="non-member-address-postcode" type="text" name="register-address-postcode" />
 					</div>
 					<!-- end of right address column -->
 					<div>
