--- a/src/my-account-edit-address.html
+++ b/src/my-account-edit-address.html
@@ -6,11 +6,11 @@
 		<div id="account-edit-address" class="account-return">
 			<div id="account-add-address-menu"class="left">
 				<ul class="my-account-navigation">
-					<li>View your order history</li>
-					<li>View your wish list</li>
-					<li>Update your details</li>
-					<li><span class="near-black">Manage your delivery Addresses</span></li>
-					<li>Refer a friend</li>
+					<li><a href="#" title="View your order history">View your order history</a></li>
+					<li><a href="#" title="View your wish list">View your wish list</a></li>
+					<li><a href="#" title="Update your details">Update your details</a></li>
+					<li><a href="#" title="Manage your delivery Addresses"><span class="near-black">Manage your delivery Addresses</span></a></li>
+					<li><a href="#" title="Refer a friend">Refer a friend</a></li>
 				</ul>
 			</div>
 			<!-- end of left column-->
