--- a/src/my-account-history.html
+++ b/src/my-account-history.html
@@ -1,6 +1,6 @@
 <div id="content" class="account-pages">
 	<div id="ad-title-space">
-		<h1 class="check-page-title"> My account </h1>
+		<h1 class="check-page-title"> My Account </h1>
 	</div>
 	<div id="grey-bg-wrapper">
 		<div id="account-order-history" class="account-order-history">
@@ -28,21 +28,21 @@
 				<ul class="order-history-items">
 					<li class="history-order-number">000013563</li>
 					<li class="history-date">23/09/2013</li>
-					<li class="history-amount"><span class="pound">&pound;</span>45.60</li>
+					<li class="history-amount"><span class="pound">&pound;</span><span class="pound">45.60</span></li>
 					<li class="history-status">Confirmed</li>
 					<li class="history-view-button"><a href="#" class="yellow-button">View Order</a></li>
 				</ul>
 				<ul class="order-history-items">
 					<li class="history-order-number">000013112</li>
 					<li class="history-date">05/05/2013</li>
-					<li class="history-amount"><span class="pound">&pound;</span>165.30</li>
+					<li class="history-amount"><span class="pound">&pound;</span><span class="pound">165.30</span></li>
 					<li class="history-status">Dispatched</li>
 					<li class="history-view-button"><a href="#" class="yellow-button">View Order</a></li>
 				</ul>
 				<ul class="order-history-items">
 					<li class="history-order-number">000010234</li>
 					<li class="history-date">15/09/2012</li>
-					<li class="history-amount"><span class="pound">&pound;</span>90.80</li>
+					<li class="history-amount"><span class="pound">&pound;</span><span class="pound">90.80</span></li>
 					<li class="history-status">Dispatched</li>
 					<li class="history-view-button"><a href="#" class="yellow-button">View Order</a></li>
 				</ul>
