--- a/src/my-account-manage-address.html
+++ b/src/my-account-manage-address.html
@@ -1,7 +1,7 @@
 <div id="content" class="account-pages">
 	<div id="ad-title-space">
 		<h1 class="check-page-title">
-			My account
+			My Account
 		</h1>
 	</div>
 	<div id="grey-bg-wrapper">
