--- a/src/my-account-edit-address.html
+++ b/src/my-account-edit-address.html
@@ -1,6 +1,6 @@
 <div id="content" class="account-pages">
 	<div id="ad-title-space">
-		<h1 class="check-page-title">My account</h1>
+		<h1 class="check-page-title">My Account</h1>
 	</div>
 	<div id="grey-bg-wrapper">
 		<div id="account-edit-address" class="account-return">
