--- a/src/my-account-order.html
+++ b/src/my-account-order.html
@@ -1,7 +1,7 @@
 
 <div id="content" class="account-pages">
 	<div id="ad-title-space">
-		<h1 class="check-page-title"> My account </h1>
+		<h1 class="check-page-title"> My Account </h1>
 	</div>
 	<div id="grey-bg-wrapper">
 		<div id="account-order" class="account-order">
