--- a/src/my-account-sign-in.html
+++ b/src/my-account-sign-in.html
@@ -18,12 +18,11 @@
 							<p>Please enter your existing email and password.</p>			
 							<p class="error">Please enter a password</p>
 							<label for="login-email">Email address: </label> 
-							<input id="login-email" type="text" name="checkout-login-email" size="40" />
+							<input id="login-email" type="text" name="checkout-login-email" />
 							<div class="clear"></div>
 							<p class="error">Please enter a password</p>
 							<label for="login-password">Password:</label> 
-							<div class="clear"></div>
-							<input id="login-password" type="password" name="pwd" size="40" />
+							<input id="login-password" type="password" name="pwd" />
 							<div class="clear"></div>
 							<button name="login-submit" type="submit"class="yellow-button">Sign In</button>
 						<p class="forgot-password"><a href="#" class="link text-button">Forgotten Password?</a></p>
@@ -39,10 +38,10 @@
 							<p>Please enter your email address.</p>
 							<p class="error">Please enter a valid email address</p>
 							<label for="new-customer-email">Email address:</label> 
-							<input  id="new-customer-email" type="text" name="checkout-new-customer-email" size="40" />
+							<input  id="new-customer-email" type="text" name="checkout-new-customer-email" />
 							<div class="clear"></div>
 							<p class="error">Please enter a password</p>
-							<label for="new-customer-password">Password: </label><input id="new-customer-password" type="password" name="pwd" size="40" />
+							<label for="new-customer-password">Password: </label><input id="new-customer-password" type="password" name="pwd"  />
 						
 							<button class="yellow-button">
 								Continue
