--- a/src/my-account-wishlist-template.html
+++ b/src/my-account-wishlist-template.html
@@ -1,7 +1,7 @@
 <div id="content" class="account-pages">
 	<div id="ad-title-space">
 		<h1 class="check-page-title">
-			My account
+			My Account
 		</h1>
 	</div>
 	<div id="grey-bg-wrapper">
@@ -43,7 +43,11 @@
 						<p><a href="#" class="pag-prev pag-disabled">PREVIOUS</a>  <a href="#" class="pag-next">NEXT</a>  <a href="#" class="pag-disabled">1</a>  <a href="#">2</a> ...  <a href="#">VIEW ALL</a></p>
 					</div>
 				</div>
-				<div style="clear:both"></div>
+		
+			</div>
+			
+			
+					<div style="clear:both"></div>
 				<!-- MORE THAN FOUR PRODUCTS WILL BREAK TO NEW LINE -->
 				<div id="product-list">
 					<form id="products-form" action="#" method="post"  target="_self">
@@ -101,7 +105,10 @@
 						<!-- end loop -->
 					</form>
 				</div>
-			</div>
+			
+			
+			
+			
 			<!-- end of wishlist-basket -->
 		</div>
 		<!-- end of #account-order -->
