aligned buttons on update details page

--- a/src/my-account-update-details.html
+++ b/src/my-account-update-details.html
@@ -33,7 +33,7 @@
 				<p class="error"> Please enter an email address</p>
 				<label for="update-email">Email Address*</label>
 				<input id="update-email" type="text" name="update-email" />
-				<button type="submit" class="yellow-button">Save Changes </button>
+				<button type="submit" class="yellow-button btn-left">Save Changes </button>
 			</form>
 			<form id="update-password" action="#">
 				<p class="bottom-border row-title grey">Please enter current and new password:</p>
@@ -47,7 +47,7 @@
 				<input id="update-new-password" type="password" name="update-new-password" />
 				<label for="update-password-confirm">Confirm Password*</label>
 				<input id="update-password-confirm" type="password" name="update-password-confirm" />
-				<button type="submit" class="yellow-button">Save Changes </button>
+				<button type="submit" class="yellow-button btn-mid">Save Changes </button>
 			</form>
 			<form id="update-newsletter" action="#">
 				<p class="row-title">
@@ -90,7 +90,7 @@
 						<label for="sport-other">Other</label>
 						<input type="radio" value="cycling" id="sport-other" name="sport" />
 					</fieldset>
-					<button type="submit" class="yellow-button">Save Changes </button>
+					<button type="submit" class="yellow-button btn-right">Save Changes </button>
 				</div>
 			</form>
 			<!-- end of update details form--> 
