account pages seem good

--- a/src/my-account-manage-address.html
+++ b/src/my-account-manage-address.html
@@ -19,7 +19,7 @@
 			<div class="clear">
 				<button class="yellow-button-wide">Add a new address</button>
 				<div class="manage-address-wrapper">
-					<ul class="manage-delivery-titles">
+					<ul class="manage-delivery-titles" style="padding-bottom:0">
 						<li class="delivery-name">Name:</li>
 						<li class="delivery-address">Address:</li>
 					</ul>
