--- a/src/my-account-reset-password.html
+++ b/src/my-account-reset-password.html
@@ -5,7 +5,7 @@
 		</h1>
 	</div>
 	<div id="grey-bg-wrapper">
-		<div id="account-refer-friend" class="account-return">
+		<div class="account-return">
 			<div id="account-add-address-menu"class="left margin-left-30">
 				<ul class="my-account-navigation ">
 					<li><a href="#" title="View your order history">View your order history</a></li>
