--- a/src/my-account-update-details.html
+++ b/src/my-account-update-details.html
@@ -71,10 +71,10 @@
 						<input type="radio" name="age" value="31-40" id="age-31-40" />
 						<label for="age-41-50">41 - 50</label>
 						<input type="radio" name="age" value="41 - 50" id="age-41-50" />
-						<label for="age-50-plus">50 and above</label>
+						<label for="age-50-plus">50 +</label>
 						<input type="radio" name="age" value="50+" id="age-50-plus" />
 					</fieldset>
-					<fieldset>
+					<fieldset id="radio-label-fix">
 						<legend>Sport</legend>
 						<label for="sport-running">Running</label>
 						<input type="radio" name="sport" id="sport-running" value="boxing" />
